# credit-optimizer-v5

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SKILL.md  manifest.json  pyproject.toml  server.json
.github/workflows/: health-check.yml  publish.yml
mcp_credit_optimizer/: __init__.py  server.py
